CBP naar Autoriteit Persoonsgegevens

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -571,8 +571,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                             <label for="intakevragen-A-text">A. Beschrijf welke persoonsgegevens je wil gaan gebruiken voor het nieuwe doel.</label>
                                                             <button onclick="toggleExtraInfo(this)">Toelichting op vraag &raquo;</button>
                                                             <div class="extrainfo">
-                                                                Uiteraard is het heel belangrijk de persoonsgegevens goed te duiden. Let op, dit moet je dus doen voor alle verzamelingen persoonsgegevens die je wil gebruiken voor de voorgenomen verwerking. Ter inspiratie kan je hierbij kijken naar vraag 4 (en de toelichting daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf" target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van het CBP.
-                                                            </div>van het CBP.</div>
+                                                                Uiteraard is het heel belangrijk de persoonsgegevens goed te duiden. Let op, dit moet je dus doen voor alle verzamelingen persoonsgegevens die je wil gebruiken voor de voorgenomen verwerking. Ter inspiratie kan je hierbij kijken naar vraag 4 (en de toelichting daarop) van <a href="https://autoriteitpersoonsgegevens.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf" target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van de Autoriteit Persoonsgegevens.</div>
                                                             <div class="inputarea">
                                                                 <textarea id="intakevragen-A-text" name="intakevragen-A" onchange="updateIntake(this.id, this.value)"></textarea>
                                                             </div>
@@ -585,8 +584,8 @@ Author: Geonovum, the Netherlands, 2015.
                                                             <div class="extrainfo">
                                                                 Beschrijf, wederom voor alle verzamelingen persoonsgegevens die voor het nieuwe doel wil gaan gebruiken, welke positie je daarbij hebt. Dat kan dus zijn: verantwoordelijke, mede-verantwoordelijke, bewerker, of je hebt geen band met die (specieke) persoonsgegevens.
                                                                 Mocht je twijfelen over de betekenis van deze begrippen, lees dan bij <a href="#watisjerol">'wat is je rol'</a> een uitgebreide
-                                                                beschrijving van dat begrip. Ter inspiratie kan je hierbij kijken naar vragen 1, 2 en 3 (en de toelichtingen daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf"
-                                                                target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van het CBP.</div>
+                                                                beschrijving van dat begrip. Ter inspiratie kan je hierbij kijken naar vragen 1, 2 en 3 (en de toelichtingen daarop) van <a href="https://autoriteitpersoonsgegevens.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf"
+                                                                target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van de Autoriteit Persoonsgegevens.</div>
                                                             <div class="inputarea">
                                                                 <textarea id="intakevragen-B-text" name="intakevragen-B" onchange="updateIntake(this.id, this.value)"></textarea>
                                                             </div>
@@ -600,8 +599,8 @@ Author: Geonovum, the Netherlands, 2015.
                                                                 De reeds verzamelde persoonsgegevens hadden slechts voor welbepaalde, uitdrukkelijk omschreven en gerechtvaardigde doelen mogen worden verzameld, aldus <a href="http://wetten.overheid.nl/BWBR0011468/geldigheidsdatum_19-10-2015#Hoofdstuk2_Paragraaf1_Artikel7"
                                                                 target="_blank">art 7 Wbp</a>. Deze doelen moeten dus reeds vastgelegd zijn. Bij gemeentes zullen dit dus heel vaak de taken zijn die ze uitvoeren op basis van wettelijke voorschriften, zoals
                                                                 de gemeentewet, of sectorale wetten zoals bijvoorbeeld de wet Wmo. Indien meerdere doelen zijn dan hadden die allemaal apart moeten worden beschreven. Deze informatie moet dus reeds (binnen
-                                                                je organisatie (voor zover het om eigen persoonsgegevens gaat)) geregistreerd zijn. Dit is dus een kwestie van 'kopieeren' (als het goed is). Bij <a href="#eisenwbp">'eisen die de Wbp stelt aan doelen en grondslagen'</a>                                                                kan je hier meer over lezen. Ter inspiratie kan je hierbij kijken naar vraag 5 (en de toelichting daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf"
-                                                                target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van het CBP.
+                                                                je organisatie (voor zover het om eigen persoonsgegevens gaat)) geregistreerd zijn. Dit is dus een kwestie van 'kopieeren' (als het goed is). Bij <a href="#eisenwbp">'eisen die de Wbp stelt aan doelen en grondslagen'</a>                                                                kan je hier meer over lezen. Ter inspiratie kan je hierbij kijken naar vraag 5 (en de toelichting daarop) van <a href="https://autoriteitpersoonsgegevens.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf"
+                                                                target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van de Autoriteit Persoonsgegevens.
                                                             </div>
                                                             <div class="inputarea">
                                                                 <textarea id="intakevragen-C-text" name="intakevragen-C" onchange="updateIntake(this.id, this.value)"></textarea>
@@ -615,7 +614,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                             <div class="extrainfo">
                                                                 Ook het doel van de voorgenomen verwerking moet uiteraard vastgelegd worden. Immers, anders kunnen het oorspronkelijke doel en het nieuwe doel niet met elkaar vergeleken worden (en kan dus niet vastgesteld worden of er sprake is van 'onverenigbaarheid').
                                                                 Bij <a href="#eisenwbp">'eisen die de Wbp stelt aan doelen en grondslagen'</a> kan je hier meer over lezen. Ter inspiratie
-                                                                kan je hierbij kijken naar vraag 5 (en de toelichting daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf" target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van het CBP.
+                                                                kan je hierbij kijken naar vraag 5 (en de toelichting daarop) van <a href="https://autoriteitpersoonsgegevens.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf" target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van de Autoriteit Persoonsgegevens.
                                                             </div>
                                                             <div class="inputarea">
                                                                 <textarea id="intakevragen-D-text" name="intakevragen-D" onchange="updateIntake(this.id, this.value)"></textarea>
@@ -628,8 +627,8 @@ Author: Geonovum, the Netherlands, 2015.
                                                             <button onclick="toggleExtraInfo(this)">Toelichting op vraag &raquo;</button>
                                                             <div class="extrainfo">
                                                                 Bij deze vraag moet worden ingevuld aan welke ontvangers of categorieën van ontvangers de gegevens worden verstrekt. De Wbp verstaat onder het begrip ontvanger: degene aan wie de persoonsgegevens worden verstrekt. Ter inspiratie kan je hierbij kijken
-                                                                naar vraag 7 (en de toelichting daarop) van <a href="https://www.cbpweb.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf"
-                                                                target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van het CBP.
+                                                                naar vraag 7 (en de toelichting daarop) van <a href="https://autoriteitpersoonsgegevens.nl/sites/default/files/downloads/melden/meldingsformulier_wbp.pdf"
+                                                                target="_blank">het officiele meldingsformulier vewerking persoonsgegevens</a> van de Autoriteit Persoonsgegevens.
                                                             </div>
                                                             <div class="inputarea">
                                                                 <textarea id="intakevragen-E-text" name="intakevragen-E" onchange="updateIntake(this.id, this.value)"></textarea>
@@ -781,7 +780,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                     <p>Het tweede element van artikel 9 Wbp aan de hand waarvan je moet beoordelen of een nieuwe verwerking van gegevens niet onverenigbaar is met het oorspronkelijke doel waarvoor de gegevens verzameld zijn,
                                                         betreft de aard van gegevens. Naarmate de aard van de gegevens meer 'bijzonder' is, zal verenigbaarheid van de voorgenomen verwerking met het oorspronkelijke doel (of doelen) kleiner zijn. Dat 'bijzondere'
                                                         gaat overigens verder dan het wettelijke regime (art 16 Wbp noemt deze op): ook andere gegevens kunnen naar hun aard bijzonder zijn. Denk bijvoorbeeld aan informatie over iemands financiële positie,
-                                                        gegevens over minderjarigen en locatiegegevens van iemands mobiele telefoon. De groep van gegevens die door het CBP als gevoelig wordt aangemerkt, wordt overigens steeds breder (bijvoorbeeld gegevens
+                                                        gegevens over minderjarigen en locatiegegevens van iemands mobiele telefoon. De groep van gegevens die door de Autoriteit Persoonsgegevens als gevoelig wordt aangemerkt, wordt overigens steeds breder (bijvoorbeeld gegevens
                                                         die kunnen worden gebruikt in het kader van identiteitsdiefstal), zie <a href="https://cbpweb.nl/sites/default/files/atoms/files/richtsnoeren_meldplicht_datalekken.pdf" target="_blank">https://cbpweb.nl/sites/default/files/atoms/files/richtsnoeren_meldplicht_datalekken.pdf</a>.</p>
                                                     <fieldset id="aardgegevens">
                                                         <legend>De in te vullen vragenlijst</legend>
@@ -1223,7 +1222,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                             </div>
                                                             <button onclick="toggleExtraInfo(this)">Toelichting op vraag &raquo;</button>
                                                             <div class="extrainfo">Een branche of sector kan een gedragscode gebruiken voor de omgang met persoonsgegevens. Dit is een vorm van zelfregulering. Door een gedragscode op te stellen, maakt de branche of sector zelf
-                                                                de algemene normen uit de Wbp concreter. Het CBP kan op aanvraag een goedkeurende verklaring afgeven voor een gedragscode. De toepasselijkheid van een dergelijke code draagt positief bij
+                                                                de algemene normen uit de Wbp concreter. De Autoriteit Persoonsgegevens kan op aanvraag een goedkeurende verklaring afgeven voor een gedragscode. De toepasselijkheid van een dergelijke code draagt positief bij
                                                                 aan de verenigbaarheid.</div>
                                                         </div>
 
@@ -1441,7 +1440,7 @@ indien behaalde score &gt; 50% -->
                                                         <li>de Wbp nu eenmaal abstract is en ondanks de concretiseringslag die de tool maakt, het uiteindelijk gaat om een eigen inschatting;</li>
                                                         <li>die abstractie er ook toe leidt dat de adviezen om tekortkomingen op te lossen nimmer heel concreet kunnen worden.</li>
                                                     </ul>
-                                                    
+
                                                     <h4>Verdere ontwikkeling</h4>
                                                     <p>Uiteraard is een tool nooit af en kan deze altijd verbeterd worden. Geonovum ontvangt graag suggesties, via <a href="http://www.geonovum.nl/feedback-privacytool" target="_blank">het feedback formulier</a>, vanuit het
                                                         veld en zal aan de hand daarvan nagaan of en zo ja in welke vorm een vernieuwde versie gemaakt kan worden.</p>
@@ -1567,15 +1566,15 @@ indien behaalde score &gt; 50% -->
 
                             <h5>CBP</h5>
                             <p>Het College bescherming persoonsgegevens (CBP) is belast met het toezicht op de naleving van de regels in de Wbp. In het kader van de toezichtstaak kan het, ook uit eigen beweging, onderzoek doen naar overtredingen van de Wbp
-                                en sancties (bestuursdwang of bestuurlijke boetes) opleggen, waartegen overigens rechtsbescherming bestaat). Bij handhaving legt het CBP de nadruk op ernstige overtredingen die structureel van aard zijn en veel mensen raken.
-                                Bij het CBP werkten in 2013 circa 80 fte’s en had het een budget van in totaal € 7.586.000,-.
+                                en sancties (bestuursdwang of bestuurlijke boetes) opleggen, waartegen overigens rechtsbescherming bestaat). Bij handhaving legt de Autoriteit Persoonsgegevens de nadruk op ernstige overtredingen die structureel van aard zijn en veel mensen raken.
+                                Bij de Autoriteit Persoonsgegevens werkten in 2013 circa 80 fte’s en had het een budget van in totaal € 7.586.000,-.
                             </p>
 
                             <h5>FG en Artikel 29 Werkgroep</h5>
                             <p>In het krachtenveld rond de Wbp zijn voorts nog twee instituties van belang: de functionaris voor de gegevensbescherming en de Artikel 29 Werkgroep. Organisaties kunnen ervoor kiezen binnen hun eigen muren een toezichthouder
                                 in te stellen, een zogenaamde functionaris voor de gegevensbescherming, kortweg ‘een FG’. Deze FG heeft op grond van de Wbp een onafhankelijke positie en als taak ervoor zorgen dat de Wbp netjes wordt nageleefd. Circa 400
                                 organisaties in Nederland hebben inmiddels een FG. Verder voorziet Artikel 29 van de Privacy Richtlijn in de oprichting van een onafhankelijk advies -en overlegorgaan van Europese privacytoezichthouders, die men dan ook
-                                de ‘Artikel 29 Werkgroep’ heeft genoemd. Hierin zitten alle Lidstaatwaakhonden zoals het CBP. Strevend naar een uniforme toepassing van de principes uit de Privacy Richtlijn kan zij, gevraagd en ongevraagd, hierover uitleg
+                                de ‘Artikel 29 Werkgroep’ heeft genoemd. Hierin zitten alle Lidstaatwaakhonden zoals de Autoriteit Persoonsgegevens. Strevend naar een uniforme toepassing van de principes uit de Privacy Richtlijn kan zij, gevraagd en ongevraagd, hierover uitleg
                                 geven. Dit doen ze dan ook veelvuldig in de vorm van werkdocumenten en opinies. Daarnaast coördineert het de gezamenlijke handhaving van de nationale toezichthouders.</p>
 
                             <h5>ePrivacy Richtlijn (Tw)</h5>
@@ -1590,7 +1589,7 @@ indien behaalde score &gt; 50% -->
                                 nog tal van informatieverplichtingen op de dienstaanbieder.</p>
 
                             <h5>ACM</h5>
-                            <p>Toezicht op deze regels is neergelegd bij de Autoriteit Commerciële Markt (ACM). Bij overtreding van de regels kan de ACM een dwangsom opleggen. In 2005 hebben de OPTA, de voorloper van de ACM, en het CBP een samenwerkingsprotocol
+                            <p>Toezicht op deze regels is neergelegd bij de Autoriteit Commerciële Markt (ACM). Bij overtreding van de regels kan de ACM een dwangsom opleggen. In 2005 hebben de OPTA, de voorloper van de ACM, en de Autoriteit Persoonsgegevens een samenwerkingsprotocol
                                 opgesteld waarin afspraken zijn gemaakt over mogelijke samenloop van bevoegdheden. De ACM bestond in 2013 uit ongeveer 500 fte’s en het budget voor 2013 was € 771.000. Daarbij moet wel opgemerkt worden dat de ACM veel meer
                                 taken heeft dan toezicht op de naleving van de regels van de ePrivacy Richtlijn.</p>
 
