CBP naar Autoriteit Persoonsgegevens, correcties

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -781,7 +781,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                         betreft de aard van gegevens. Naarmate de aard van de gegevens meer 'bijzonder' is, zal verenigbaarheid van de voorgenomen verwerking met het oorspronkelijke doel (of doelen) kleiner zijn. Dat 'bijzondere'
                                                         gaat overigens verder dan het wettelijke regime (art 16 Wbp noemt deze op): ook andere gegevens kunnen naar hun aard bijzonder zijn. Denk bijvoorbeeld aan informatie over iemands financiële positie,
                                                         gegevens over minderjarigen en locatiegegevens van iemands mobiele telefoon. De groep van gegevens die door de Autoriteit Persoonsgegevens als gevoelig wordt aangemerkt, wordt overigens steeds breder (bijvoorbeeld gegevens
-                                                        die kunnen worden gebruikt in het kader van identiteitsdiefstal), zie <a href="https://cbpweb.nl/sites/default/files/atoms/files/richtsnoeren_meldplicht_datalekken.pdf" target="_blank">https://cbpweb.nl/sites/default/files/atoms/files/richtsnoeren_meldplicht_datalekken.pdf</a>.</p>
+                                                        die kunnen worden gebruikt in het kader van identiteitsdiefstal), zie <a href="https://autoriteitpersoonsgegevens.nl/sites/default/files/atoms/files/richtsnoeren_meldplicht_datalekken.pdf" target="_blank">https://autoriteitpersoonsgegevens.nl/sites/default/files/atoms/files/richtsnoeren_meldplicht_datalekken.pdf</a>.</p>
                                                     <fieldset id="aardgegevens">
                                                         <legend>De in te vullen vragenlijst</legend>
 
@@ -1564,8 +1564,8 @@ indien behaalde score &gt; 50% -->
                             <p>Verder heeft de verantwoordelijke tal van informatieplichten en moeten de door hem verwerkte gegevens ook aan bepaalde kwaliteitseisen voldoen, afdoende beveiligd zijn en zorgvuldig bewaard worden. Betrokkenen hebben inzage-
                                 en correctierechten en een beroep op de rechter is mogelijk bij (vermeende) inbreuk.</p>
 
-                            <h5>CBP</h5>
-                            <p>Het College bescherming persoonsgegevens (CBP) is belast met het toezicht op de naleving van de regels in de Wbp. In het kader van de toezichtstaak kan het, ook uit eigen beweging, onderzoek doen naar overtredingen van de Wbp
+                            <h5>Autoriteit Persoonsgegevens</h5>
+                            <p>De Autoriteit Persoonsgegevens is belast met het toezicht op de naleving van de regels in de Wbp. In het kader van de toezichtstaak kan het, ook uit eigen beweging, onderzoek doen naar overtredingen van de Wbp
                                 en sancties (bestuursdwang of bestuurlijke boetes) opleggen, waartegen overigens rechtsbescherming bestaat). Bij handhaving legt de Autoriteit Persoonsgegevens de nadruk op ernstige overtredingen die structureel van aard zijn en veel mensen raken.
                                 Bij de Autoriteit Persoonsgegevens werkten in 2013 circa 80 fte’s en had het een budget van in totaal € 7.586.000,-.
                             </p>
@@ -1674,8 +1674,8 @@ indien behaalde score &gt; 50% -->
                                 <em>identificeerbaar</em>. Dat hangt wel af van de mogelijkheden die de verantwoordelijke heeft. Als door versleuteling van de gegevens en/of afspraken over de toegang tot die gegevens, daadwerkelijke identificatie redelijkerwijs
                                 is uitgesloten, is de persoon niet identificeerbaar.</p>
 
-                            <p>Kortom: de feitelijke situatie – zoals de context van de verwerking, de technologie – zal steeds bepalend zijn voor de vaststelling of sprake is van persoonsgegevens. Om meer houvast te krijgen, kun je <a href="https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-wbp"
-                                target="_blank">de uitgebreide toelichting lezen op het begrip persoonsgegeven van het College Bescherming Persoonsgegevens (CBP)</a>.
+                            <p>Kortom: de feitelijke situatie – zoals de context van de verwerking, de technologie – zal steeds bepalend zijn voor de vaststelling of sprake is van persoonsgegevens. Om meer houvast te krijgen, kun je <a href="https://autoriteitpersoonsgegevens.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-wbp"
+                                target="_blank">de uitgebreide toelichting lezen op het begrip persoonsgegeven van de Autoriteit Persoonsgegevens</a>.
                             </p>
                             <button onclick="window.history.go(-1)">terug</button>
                         </div>
@@ -1701,7 +1701,7 @@ indien behaalde score &gt; 50% -->
                                 worden toegerekend. Wat de in het maatschappelijk verkeer geldende maatstaven zijn, is moeilijk te zeggen: het zal van de feitelijke situatie afhangen. Dit criterium is opgenomen omdat het voor burgers soms moeilijk te
                                 bepalen is wie formeel-juridisch de bevoegdheid heeft.In gemeenteland is de verantwoordelijke in de regel het College van B&amp;W en bij ministeries is dit de Minister.</p>
 
-                            <p>Om meer houvast te krijgen, kun je <a href="https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-d-wbp" target="_blank">de uitgebreide toelichting lezen op het begrip verantwoordelijke van het College Bescherming Persoonsgegevens (CBP)</a>.</p>
+                            <p>Om meer houvast te krijgen, kun je <a href="https://autoriteitpersoonsgegevens.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-d-wbp" target="_blank">de uitgebreide toelichting lezen op het begrip verantwoordelijke van de Autoriteit Persoonsgegevens</a>.</p>
 
                             <h5>Bewerker</h5>
                             <p>Als verantwoordelijke hoeft je niet feitelijk zelf de gegevens te verwerken. Van belang is of je bepaalt welke gegevens worden verwerkt, hoe lang, met welke middelen en voor welk doel. Verwerkt je gegevens ten behoeve van een
@@ -1714,7 +1714,7 @@ indien behaalde score &gt; 50% -->
                                 Dropbox.
                             </p>
 
-                            <p>Om meer houvast te krijgen, kun je <a href="https://cbpweb.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-e-wbp" target="_blank">de uitgebreide toelichting lezen op het begrip bewerker van het College Bescherming Persoonsgegevens (CBP)</a>.</p>
+                            <p>Om meer houvast te krijgen, kun je <a href="https://autoriteitpersoonsgegevens.nl/nl/over-privacy/wetten/wbp-naslag/hoofdstuk-1-algemene-bepalingen-art-1-tm-5/artikel-1-sub-e-wbp" target="_blank">de uitgebreide toelichting lezen op het begrip bewerker van de Autoriteit Persoonsgegevens</a>.</p>
                             <button onclick="window.history.go(-1)">terug</button>
                         </div>
                         <!-- end collapsible -->
