kleine tekstuele wijzigingen, feedback formulier link aan de rechterkant erbij

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -48,12 +48,12 @@ Author: Geonovum, the Netherlands, 2015.
     <!--[if IE]>
     <link type="text/css" rel="stylesheet" media="all" href="http://www.geonovum.nl/sites/all/themes/geonovum/ie.css?e" />
     <![endif]-->
-    <link type="text/css" rel="stylesheet" media="all" href="css/privacytool.css?20151202_2" />
+    <link type="text/css" rel="stylesheet" media="all" href="css/privacytool.css?20160309" />
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="js/jquery.steps.js"></script>
     <script type="text/javascript" src="js/jquery.form.js"></script>
     <script type="text/javascript" src="js/jquery.fileDownload.js"></script>
-    <script type="text/javascript" src="js/privacytool.js?20160203_1"></script>
+    <script type="text/javascript" src="js/privacytool.js?20160309"></script>
 </head>
 
 <body>
@@ -181,7 +181,7 @@ Author: Geonovum, the Netherlands, 2015.
                                             mag verspreiden, onder vermelding van de naam van Geonovum.</p>
 
                                         <h3>Wie heeft deze tool gemaakt</h3>
-                                        <p>Deze tool is samengesteld door Iris van de Kerk (thans Rijkswaterstaat), Bastiaan van Loenen (TU Delft) en Marc de Vries (The Green Land BV) in opdracht van Geonovum. Dit met de gedachte dat in toenemende mate geo-informatie
+                                        <p>Deze tool is samengesteld door Iris van de Kerk (thans Rijkswaterstaat), Bastiaan van Loenen (Geonovum) en Marc de Vries (The Green Land BV) in opdracht van Geonovum. Dit met de gedachte dat in toenemende mate geo-informatie
                                             een koppelpunt wordt bij het nieuw gebruik van bestaande data, waaronder persoonsgegevens. Aldus beoogt Geonovum met deze tool bij te dragen aan het goed gebruik van geo-informatie, mede in relatie tot de Wbp.
                                             Wil je meer weten over de relatie tussen geo-informatie en persoonsgegegevens, lees dan <a href="derolvanlocatie">De rol van locatie: in toenemende mate hét koppelpunt van gegevens</a></p>
 
@@ -205,11 +205,11 @@ Author: Geonovum, the Netherlands, 2015.
                                                     <div class="organisation">Net2Legal Consultants</div>
                                                 </li>
                                                 <li>
-                                                    <div class="contributor">Gommans, J</div>
+                                                    <div class="contributor">Gommans, J.</div>
                                                     <div class="organisation">Gemeente Dodrecht</div>
                                                 </li>
                                                 <li>
-                                                    <div class="contributor">Jaap-Henk Hoepman</div>
+                                                    <div class="contributor">Hoepman, J.</div>
                                                     <div class="organisation">Radboud Universiteit Nijmegen</div>
                                                 </li>
                                                 <li>
@@ -218,7 +218,7 @@ Author: Geonovum, the Netherlands, 2015.
                                                 </li>
                                                 <li>
                                                     <div class="contributor">Padding, P</div>
-                                                    <div class="organisation">Stichting Geonovum</div>
+                                                    <div class="organisation">Geonovum</div>
                                                 </li>
                                                 <li>
                                                     <div class="contributor">Pleeging, J.</div>
@@ -234,15 +234,15 @@ Author: Geonovum, the Netherlands, 2015.
                                                 </li>
                                                 <li>
                                                     <div class="contributor">Stor, R.</div>
-                                                    <div class="organisation">Stichting Geonovum</div>
+                                                    <div class="organisation">Geonovum</div>
                                                 </li>
                                                 <li>
                                                     <div class="contributor">Verdonk, Y.</div>
-                                                    <div class="organisation">Stichting Geonovum</div>
+                                                    <div class="organisation">Geonovum</div>
                                                 </li>
                                                 <li>
-                                                    <div class="contributor">Velde, R. van der</div>
-                                                    <div class="organisation">Stichting Geonovum (begeleidingsgroep)</div>
+                                                    <div class="contributor">Velde, R. van de</div>
+                                                    <div class="organisation">Geonovum (begeleidingsgroep)</div>
                                                 </li>
                                                 <li>
                                                     <div class="contributor">Vetjens, B.</div>
@@ -1471,6 +1471,9 @@ indien behaalde score &gt; 50% -->
                             </li>
                             <li>
                                 <button onclick="$('#uploadarea').toggle()" class="btn" title="Laad antwoorden uit een bestand">Upload antwoorden</button>
+                            </li>
+                            <li>
+                                <a href="http://www.geonovum.nl/feedback-privacytool" target="_blank">Feedback geven</a>
                             </li>
                         </ul>
                         <div id="tussenresultaat"></div>
